--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@syntect/node",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "index.js",
   "types": "index.d.ts",
   "bin": {
@@ -24,6 +24,14 @@
     }
   },
   "license": "MIT",
+  "keywords": [
+    "highlight",
+    "rust",
+    "syntect",
+    "textmate",
+    "native",
+    "node"
+  ],
   "devDependencies": {
     "@napi-rs/cli": "^2.3.0"
   },
@@ -41,7 +49,7 @@
     "prepublishOnly": "napi prepublish -t npm",
     "version": "napi version"
   },
-  "description": "Syntect (Syntax highlighter in Rust) for Node.js and WebAssembly",
+  "description": "Syntect (Syntax highlighter in Rust) for Node.js",
   "repository": "https://github.com/Menci/syntect-js",
   "author": "Menci <huanghaorui301@gmail.com>"
 }
